5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4029/executions/1749_3089.log
== TEST (2019-05-15 18:13:06) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	if (n > 0):
		n = n + 1
		s = s + n + 1
		msg = "Direita"
	else:
		n = n + 1
		msg = "Esquerda"
print(n)
print(msg)
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:13:36) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	if (n > 0):
		n = n + 1
		s = s + n + 1
		msg = "Direita"
	else:
		n = n + 1
		msg = "Esquerda"
		n = int(input("Digite um numero: "))
print(n)
print(msg)
-- OUTPUT:
0.9396926208
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:14:18) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	if (n > 0):
		n = n + 1
		s = s + n + 1
		msg = Direita
	else:
		n = n + 1
		msg = Esquerda
		n = int(input("Digite um numero: "))
	print(n)
	print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    msg = Direita
NameError: name 'Direita' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:14:42) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	if (n > 0):
		n = n + 1
		s = s + n + 1
		msg = "Direita"
	else:
		n = n + 1
		msg = "Esquerda"
		n = int(input("Digite um numero: "))
	print(n)
	print(msg)
-- OUTPUT:
2
Direita
3
Direita
4
Direita
5
Direita
6
Direita
7
Direita
8
Direita
9
Direita
10
Direita
11
Direita
12
Direita
13
Direita
14
Direita
15
Direita
16
Direita
17
Direita
18
Direita
19
Direita
20
Direita
21
Direita
22
Direita
23
Direita
24
Direita
25
Direita
26
Direita
27
Direita
28
Direita
29
Direita
30
Direita
31
Direita
32
Direita
33
Direita
34
Direita
35
Direita
36
Direita
37
Direita
38
Direita
39
Direita
40
Direita
41
Direita
42
Direita
43
Direita
44
Direita
45
Direita
46
Direita
47
Direita
48
Direita
49
Direita
50
Direita
51
Direita
52
Direita
53
Direita
54
Direita
55
Direita
56
Direita
57
Direita
58
Direita
59
Direita
60
Direita
61
Direita
62
Direita
63
Direita
64
Direita
65
Direita
66
Direita
67
Direita
68
Direita
69
Direita
70
Direita
71
Direita
72
Direita
73
Direita
74
Direita
75
Direita
76
Direita
77
Direita
78
Direita
79
Direita
80
Direita
81
Direita
82
Direita
83
Direita
84
Direita
85
Direita
86
Direita
87
Direita
88
Direita
89
Direita
90
Direita
91
Direita
92
Direita
93
Dire
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:18:00) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	if (n >= 1):
		n = n + 1
		s = s + n + 1
		msg = "Direita"
	else:
		msg = "Esquerda"
		n = int(input("Digite um numero: "))
	print(n)
	print(msg)
-- OUTPUT:
2
Direita
3
Direita
4
Direita
5
Direita
6
Direita
7
Direita
8
Direita
9
Direita
10
Direita
11
Direita
12
Direita
13
Direita
14
Direita
15
Direita
16
Direita
17
Direita
18
Direita
19
Direita
20
Direita
21
Direita
22
Direita
23
Direita
24
Direita
25
Direita
26
Direita
27
Direita
28
Direita
29
Direita
30
Direita
31
Direita
32
Direita
33
Direita
34
Direita
35
Direita
36
Direita
37
Direita
38
Direita
39
Direita
40
Direita
41
Direita
42
Direita
43
Direita
44
Direita
45
Direita
46
Direita
47
Direita
48
Direita
49
Direita
50
Direita
51
Direita
52
Direita
53
Direita
54
Direita
55
Direita
56
Direita
57
Direita
58
Direita
59
Direita
60
Direita
61
Direita
62
Direita
63
Direita
64
Direita
65
Direita
66
Direita
67
Direita
68
Direita
69
Direita
70
Direita
71
Direita
72
Direita
73
Direita
74
Direita
75
Direita
76
Direita
77
Direita
78
Direita
79
Direita
80
Direita
81
Direita
82
Direita
83
Direita
84
Direita
85
Direita
86
Direita
87
Direita
88
Direita
89
Direita
90
Direita
91
Direita
92
Direita
93
Dire
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:36:02) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n
	s = s + 1
		if (n >= 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
	print(n)
	print(msg)
		
		
		
n = int(input("Digite um numero: "))		

		
-- ERROR:
File "XXXX", line 6
    if (n >= 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:37:02) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n
	s = s + 1
		if (n >= 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
	print(n)
	print(msg)
		
		
		
n = int(input("Digite um numero: "))		

		
-- ERROR:
File "XXXX", line 6
    if (n >= 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:39:57) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
		if (n >= 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
		
	print(n)
	print(msg)
		
		

		
-- ERROR:
File "XXXX", line 6
    if (n >= 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:18) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
		if (n > 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
n = int(input("Digite um numero: "))
		
	print(n)
	print(msg)
		
		

		
-- ERROR:
File "XXXX", line 6
    if (n > 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:30) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
		if (n >= 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
n = int(input("Digite um numero: "))
		
	print(n)
	print(msg)
		
		

		
-- ERROR:
File "XXXX", line 6
    if (n >= 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:38) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
	if (n >= 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
n = int(input("Digite um numero: "))
		
	print(n)
	print(msg)
		
		

		
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:44) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
	if (n >= 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
n = int(input("Digite um numero: "))
		
	print(n)
	print(msg)
		
		

		
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:42:52) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
	if (n >= 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
n = int(input("Digite um numero: "))
		
print(n)
print(msg)
		
		

		
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:43:22) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	n += n + s 
	s = s + 1
	if (n >= 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
		
print(n)
print(msg)
n = int(input("Digite um numero: "))
		

		
-- ERROR:
File "XXXX", line 12
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:46:38) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + 1
	n += n + s
	if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
		
	print(n)
	print(msg)
n = int(input("Digite um numero: "))
		

		
-- OUTPUT:
3
Direita
8
Direita
19
Direita
42
Direita
89
Direita
184
Direita
375
Direita
758
Direita
1525
Direita
3060
Direita
6131
Direita
12274
Direita
24561
Direita
49136
Direita
98287
Direita
196590
Direita
393197
Direita
786412
Direita
1572843
Direita
3145706
Direita
6291433
Direita
12582888
Direita
25165799
Direita
50331622
Direita
100663269
Direita
201326564
Direita
402653155
Direita
805306338
Direita
1610612705
Direita
3221225440
Direita
6442450911
Direita
12884901854
Direita
25769803741
Direita
51539607516
Direita
103079215067
Direita
206158430170
Direita
412316860377
Direita
824633720792
Direita
1649267441623
Direita
3298534883286
Direita
6597069766613
Direita
13194139533268
Direita
26388279066579
Direita
52776558133202
Direita
105553116266449
Direita
211106232532944
Direita
422212465065935
Direita
844424930131918
Direita
1688849860263885
Direita
3377699720527820
Direita
6755399441055691
Direita
13510798882111434
Direita
27021597764222921
Direita
54043195528445896
Direita
108086391056891
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:52:24) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + n
	n = n + 1
	if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
else: 
print(n)
print(msg)
n = int(input("Digite um numero: "))
		

		
-- ERROR:
File "XXXX", line 11
    print(n)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:52:53) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + n
	n = n + 1
	if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
else: 
	print(n)
	print(msg)
n = int(input("Digite um numero: "))
		

		
-- ERROR:
File "XXXX", line 11
    print(n)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:53:35) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + n
	n = n + 1
	if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
else:
n = int(input("Digite um numero: "))
	print(n)
	print(msg)

		

		
-- ERROR:
File "XXXX", line 11
    n = int(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:53:44) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + n
	n = n + 1
	if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
else:
	n = int(input("Digite um numero: "))
	print(n)
	print(msg)

		

		
-- ERROR:
File "XXXX", line 11
    n = int(input())
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:53:58) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + n
	n = n + 1
if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
else:
	n = int(input("Digite um numero: "))
	print(n)
	print(msg)

		

		
-- ERROR:
File "XXXX", line 8
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:27) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
	while ( n != 0):
	s = s + n
	n = n + 1
		if (n > 1):
		msg = "Direita"
		else:
		msg = "Esquerda"
	else:
	n = int(input("Digite um numero: "))
	print(n)
	print(msg)

		

		
-- ERROR:
File "XXXX", line 3
    while ( n != 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 18:54:52) 
-- CODE:
n = int(input("Digite um numero: "))
s = 0
while ( n != 0):
	s = s + n
	n = n + 1
	if (n > 1):
		msg = "Direita"
	else:
		msg = "Esquerda"
else:
	n = int(input("Digite um numero: "))
	print(n)
	print(msg)

		

		
-- ERROR:
File "XXXX", line 3
    while ( n != 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
